# cookiecutter-python-package

./: .coveragerc  .flake8  .gitignore  .mailmap  .pylintrc  .ruff.toml  .safety-policy-develop.yml  .safety-policy-install.yml  INSTALL.md  Makefile  README.md  README.rst  SECURITY.md  dev-requirements.txt  minimum-constraints-develop.txt  minimum-constraints-install.txt  minimum-constraints.txt  pyproject.toml  pytest.ini  requirements-base.txt  requirements-develop.txt  requirements-rtd.txt  requirements.txt  rtd-requirements.txt  setup.py  test-requirements.txt  towncrier.toml  tox.ini
.github/workflows/: publish.yml  test.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
design/: README.md
docs/: appendix.rst  changes.rst  conf.py  development.rst  index.rst  intro.rst
src/[[ cookiecutter.python_package_name ]]/: __init__.py  _version.py
src/{[ cookiecutter.python_package_name ]}/: __init__.py
tests/function/: test_version.py
tests/install/: test_install.sh
tests/installtest/: test_install.sh
tests/unit/: test_import.py  test_package.py
tests/utils/: import_installed.py
