# pyproject.toml file defining the Python distribution package
# Documentation:
# pyproject.toml: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# setuptools items: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = [
    # Keep in sync with requirements-base.txt and the base dependencies in
    # minimum-constraints-install.txt
    "setuptools>=78.1.1",
    "setuptools-scm[toml]>=9.2.0",
    "wheel>=0.41.3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]
script-files = []
zip-safe = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# setuptools needs all sub-packages to be specified as well to avoid the
# ambiguity warning. That can be done by specifyng 'packages' with a full list
# of packages including sub-packages, or by specifying 'packages.find' with
# wildcards. The strings in 'packages.find' are matched using glob pattern
# matching against the package path.
where = ["src"]
include = ["{[ cookiecutter.python_package_name ]}", "{[ cookiecutter.python_package_name ]}.*"]

[project]
name = "{[ cookiecutter.pypi_package_name ]}"
description = "{[ cookiecutter.short_description ]}"
authors = [
    {name = "{[ cookiecutter.author_full_name ]}", email = "{[ cookiecutter.author_email ]}"}
]
maintainers = [
    {name = "{[ cookiecutter.author_full_name ]}", email = "{[ cookiecutter.author_email ]}"}
]
readme = "README.md"
# License info in new PEP 639 format (since setuptools 77.0.3)
# See https://spdx.org/licenses/ for license strings.
license = "{[ cookiecutter.license ]}"
license-files = ["LICENSE"]
keywords = []  # TODO: Add some keywords for the project
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",  # TODO: Adjust as needed
    "Intended Audience :: Information Technology",  # TODO: Adjust as needed
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",  # TODO: Adjust as needed
    "Environment :: Console",  # TODO: Adjust as needed
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/{[ cookiecutter.github_org ]}/{[ cookiecutter.github_repo ]}"
"Bug Tracker" = "https://github.com/{[ cookiecutter.github_org ]}/{[ cookiecutter.github_repo ]}/issues"
"Source Code" = "https://github.com/{[ cookiecutter.github_org ]}/{[ cookiecutter.github_repo ]}"
{%- if cookiecutter.with_readthedocs == "Yes" %}
Documentation = "https://<readthedocs_name>.readthedocs.io"
Changelog = "https://<readthedocs_name>.readthedocs.io/en/master/changes.html"
{%- endif %}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Get the version from the Git tag, and write a version file:
version_file = "src/{[ cookiecutter.python_package_name ]}/_version_scm.py"
